* Changelog

** unreleased

- [[https://github.com/r0man/sablono/issues/56][#56]] Add =attrs= macro to compile Clojure maps into JavaScript
  literals.

** 0.6.1

- [[https://github.com/r0man/sablono/pull/105][#105]] Remove duplicate class names with =distinct=, not =dedupe=.
- [[https://github.com/r0man/sablono/issues/103][#103]] Optimize =let= forms.

** 0.6.0

- [[https://github.com/r0man/sablono/issues/100][#100]] Move the =render= and =render-static= functions into the
  =sablono.server= namespace, to make the dependency on
  =react-dom-server= optional.

** 0.5.4

- [[https://github.com/r0man/sablono/issues/98][#98]] Preserve CSS class order